--- a/filmweb.css
+++ b/filmweb.css
@@ -1,5 +1,6 @@
 body{
   padding-bottom: 100px;
+  background: linear-gradient(90deg, rgb(208, 176, 243) 0%, rgb(153, 74, 243) 50%, rgb(91, 23, 201) 100%);
 }
 .header{
   display: flex;
