--- a/filmweb.css
+++ b/filmweb.css
@@ -8,7 +8,7 @@ body{
   top: 0;
   left: 0;
   right: 0;
-  background-color: rgb(151, 60, 236);
+  background-color: rgb(128, 71, 182);
   height: 100px;
   align-items: center;
   justify-content: center;
@@ -109,7 +109,7 @@ nav{
   border: 1px solid;
   font-family: verdana;
   text-transform: uppercase;
-  color:rgb(151, 60, 236);
+  color: white;
   z-index: 1;
   margin-left: 20px;
 }
@@ -123,7 +123,7 @@ nav{
   position: absolute;
   border-radius: 50%;
   z-index: -1;
-  background-color:rgb(151, 60, 236);
+  background-color: white;
   transition: 1s ease;
 }   
 
@@ -143,7 +143,7 @@ nav{
 }
 
 .button:hover {
- color:white;
+ color: rgb(151, 60, 236);
 }
 
 .button:active {
@@ -154,7 +154,7 @@ nav{
   margin-top: 100px;
   justify-content: center;
   margin-bottom: -150px;
-  color: rgb(151, 60, 236);
+  color: white;
 }
 
 .some-designs{
